--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,13 @@
       <tr>
         <td style= "width:30%;">
           <img class = "newappIcon" src="images/newapp-icon.png">
+        </td>
         <td>
-            <h1>Hi there!</h1>
+            <h1>Hi Lionel!</h1>
           <p>Thanks for creating a
             <span class = "blue">NodeJS Starter Application</span>.
             To get started see the Start Coding guide under your app in your dashboard.
+        </td>
     </table>
   </body>
 
